# remex

./: Cargo.toml
remex_core/: Cargo.toml
remex_core/src/: lib.rs
remex_core/src/db/: mod.rs
remex_endpoint/: Cargo.toml  rustfmt.toml
remex_endpoint/docs/: notes.md  notes_endpoint.md  readme_endpoint.md
remex_endpoint/docs/.obsidian/: workspace.json
remex_endpoint/docs/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
remex_endpoint/src/: main.rs
remex_server/: Cargo.toml  notes.md
remex_server/docs/: notes.md  notes_server.md  readme_server.md
remex_server/docs/.obsidian/: app.json  appearance.json  hotkeys.json  workspace.json
remex_server/docs/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
remex_server/docs/.obsidian/plugins/obsidian-git/: data.json
remex_server/docs/Excalidraw/: notes_server 2024-07-26 17.14.05.excalidraw.md
remex_server/migrations/dev/: 01_logs_init.sql  02_clients_init.sql
remex_server/migrations/prod/: 01_logs_init.sql
remex_server/src/: args.rs  main.rs
remex_server/src/conn/: mod.rs
remex_server/src/db/: mod.rs
remex_server/src/endpoint/: mod.rs
