[package]
name = "remex_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
heapless = "0.8.0"
tokio = { version = "1.38.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
