[package]
name = "remex_server"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
tokio = { version = "1.38.0", features = ["full"] }
mini-redis = "0.4"
remex_core = { path = "../remex_core" }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
